--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.App{
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* display: flex;
+  flex-direction: column; */
 }
 
-.App-link {
-  color: #61dafb;
+.top{  
+  /* position: absolute;  */
+  width: 100%; 
+  height: 100px; 
+  left: 50%; 
+  text-align: center;
+  margin-bottom: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#title{
+  font-size: 35px;
+  color: rgb(76, 35, 114);
 }
+
+input{
+  height: 30px;
+  width: 440px;
+  font-size: 20px;
+  border-radius: 4px;
+}
+
+.mid{
+}
+
+
