--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App{
-  align-items: center;
-  /* display: flex;
-  flex-direction: column; */
+  align-items: center;  
+  overflow-y: hidden;
 }
 
 .top{  
-  /* position: absolute;  */
   width: 100%; 
   height: 100px; 
   left: 50%; 
@@ -25,7 +23,28 @@ input{
   border-radius: 4px;
 }
 
-.mid{
+.pop{
+  width: 100vw;
+  height: 80vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #93a2e2;
+  padding: 14px 28px;
+  border-radius: 3px;
+  max-width: 400px;
+  min-width: 200px;
+  font-size: 20px;
 }
 
 
